# chess-py

./: CHANGELOG.md  README.md  boards.py  main.py  pieces.py  pyproject.toml
.github/workflows/: github-actions.yml
chess_py/: boards.py  guiboards.py  main.py  media_manager.py  pieces.py
tests/: test_media_manager.py
