[tool.poetry]
name = "chess-py"
version = "0.1.0"
description = "Chess in python"
authors = ["Jose Hidalgo <joseche@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_py"}]


[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
ruff = "^0.4.2"
pylint-venv = "^3.0.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = "missing-class-docstring,missing-function-docstring,missing-module-docstring,no-member,import-error,too-many-instance-attributes"
